cmake_minimum_required(VERSION 4.1)
project(EjerciciosListas)

set(CMAKE_CXX_STANDARD 20)

add_executable(EjerciciosListas main.cpp
        NodoEnteroB.cpp
        NodoEnteroB.h
        ListaEnteroB.cpp
        ListaEnteroB.h
        ListaContador.cpp
        ListaContador.h
        NodoEntero2.cpp
        NodoEntero2.h
        NodoBusqueda.cpp
        NodoBusqueda.h
        ListaBusqueda.cpp
        ListaBusqueda.h
        NodoCaracter.cpp
        NodoCaracter.h
        ListaCaracter.cpp
        ListaCaracter.h
        NodoReales.cpp
        NodoReales.h
        ListaReales.cpp
        ListaReales.h
        ListaOpePila.cpp
        ListaOpePila.h
        NodoOpePila.cpp
        NodoOpePila.h
        ListaOpeCola.cpp
        ListaOpeCola.h
        NodoOpeCola.cpp
        NodoOpeCola.h
        NodoDuplicados.cpp
        NodoDuplicados.h
        ListaDuplicados.cpp
        ListaDuplicados.h
        NodoOrdenada.cpp
        NodoOrdenada.h
        ListaOrdenada.cpp
        ListaOrdenada.h
        NodoRango.cpp
        NodoRango.h
        ListaRango.cpp
        ListaRango.h
        Persona.cpp
        Persona.h
        ListaPersonas.cpp
        ListaPersonas.h
        ListaEstudiantes.cpp
        Estudiante.h
        ListaEstudiantes.h)
